# zk-apis

./: .gitignore  Cargo.toml  README.md
examples/elf/: riscv32im-succinct-zkvm-elf
examples/javascript/: package-lock.json  package.json  proof.js  sendProof.js  setOutput.js
examples/python/: proof.py  send_proof.py  set_output.py
src/: main.rs
src/sp1/: api.rs  generate_elf.rs  mod.rs  proof.rs  types.rs
src/sp1/program/: program.rs
