[package]
name = "broapis"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v3.0.0" }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
